--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-family: Arial, sans-serif;
     line-height: 1.5;
     color: #24292e;
     background-color: #ffffff;
@@ -8,7 +8,7 @@ body {
 }
 
 #content {
-    max-width: 800px;
+    max-width: 90%;
     margin: auto;
     padding: 16px;
     border: 1px solid #e1e4e8;
@@ -38,6 +38,8 @@ pre {
     padding: 16px;
     border-radius: 6px;
     overflow: auto;
+    max-width: 100%;
+    margin: 16px 0;
 }
 
 a {
@@ -60,4 +62,12 @@ footer {
     border: 1px solid #ddd;
     padding: 10px;
     overflow-x: auto;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    padding: 16px 0;
 }
